--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Sailing out into uncharted teritory, she finds herself in a land where the scenery looks strange and the language is unknown. She is wonderfully nervous to be on this journey. Begin.
+      <h1>Where are you from?</h1>
+      <p></p>I grew up in Savannah, Georgia, a beautiful southern city on the East Coast. Today I reside in a little country town just outside of the city, but will always consider Savannah home.
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Short walks and long talks, raising my family and raising myself, loving without conditions, exploring without boundaries, and always, always, learning.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be in non-profit, something that would have endless resources to help those in need solve the most complex problems to increase the light and laughter in the lives of others.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Oh, I see, I got ahead of myself. See above.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I find it facinating to be able to create something using another language. I have always wanted to be an artist, but find myself without natural talent. Maybe this is my niche?</p>
     </section>
 
     <footer id="footer">
