correcting html formatting error

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Sailing out into uncharted teritory, she finds herself in a land where the scenery looks strange and the language is unknown. She is wonderfully nervous to be on this journey. Begin.
+      <p>Sailing out into uncharted teritory, she finds herself in a land where the scenery looks strange and the language is unknown. She is wonderfully nervous to be on this journey. Begin.</p>
       <h1>Where are you from?</h1>
-      <p></p>I grew up in Savannah, Georgia, a beautiful southern city on the East Coast. Today I reside in a little country town just outside of the city, but will always consider Savannah home.
+      <p>I grew up in Savannah, Georgia, a beautiful southern city on the East Coast. Today I reside in a little country town just outside of the city, but will always consider Savannah home.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Short walks and long talks, raising my family and raising myself, loving without conditions, exploring without boundaries, and always, always, learning.</p>
       <h1>What's your dream job?</h1>
